--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,24 +2,27 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight UTC
+    - cron: "0 0 * * *"  # Runs daily
   workflow_dispatch:
+
+permissions:
+  contents: write   # ✅ this is crucial
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo content
+      - name: Checkout repository content
         uses: actions/checkout@v4
 
-      - name: Generate Snake Animation
+      - name: Generate Snake animation
         uses: Platane/snk@v3
         with:
-          github_user_name: Palash-2208   # your username
+          github_user_name: Palash-2208   # replace with your username
           outputs: dist/snake.svg
 
-      - name: Push generated snake.svg to the output branch
+      - name: Deploy to GitHub Pages (output branch)
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
